correction overflow experience

--- a/src/components/Experience/experience.scss
+++ b/src/components/Experience/experience.scss
@@ -24,6 +24,9 @@
     flex-wrap: wrap;
     gap:10rem;
   }
+  &__column{
+    width: calc(50% - 5rem);
+  }
   &__colum-title{
     font-size: 2.5rem;
 
@@ -60,7 +63,7 @@
     box-shadow: #BDC3C7 5px 5px 5px;
     border-radius: 0.8rem;
     margin-bottom: 2rem;
-    width: 60rem;
+    width: 100%;
     background-color: transparent;
     transition: all 0.5s;
     &:hover{
@@ -100,4 +103,20 @@
 width: 30px;
 height: 30px;
 }
+}
+
+@media (max-width:1200px){
+  .experience {
+    padding: 1rem 3% 0 3%;
+  }
+}
+
+@media (max-width:768px){
+
+  .experience {
+    padding: 1rem 2% 1rem 2%;
+    &__column{
+      width: 100%;
+    }
+  }
 }
